plugins/javaFX/testData/highlighting/defineAttributes.fxml
<?import javafx.scene.layout.GridPane?>
<GridPane xmlns:fx="http://javafx.com/fxml">
  <fx:define <error descr="Attribute GridPane.halignment is not allowed here">GridPane.halignment</error>="CENTER" />
  <fx:define/>
</GridPane>
